--- a/colibri/index.html
+++ b/colibri/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +17,7 @@
     <meta name="description" content="Colibri">
     <link rel="shortcut icon" href="fav.ico" type="image/x-icon" />
 </head>
+
 <body>
     <div class="sticky">
         <header>
@@ -47,7 +49,7 @@
                 </ul>
                 <img class="little-logo" src="img/logo.png" alt="">
             </div>
-            <button style="position: absolute;" id="zvonok" class="button-header popup button-no-mobile">Заказать
+            <button id="zvonok" class="button-header popup button-no-mobile">Заказать
                 звонок</button>
         </header>
     </div>
@@ -926,7 +928,7 @@
         </div>
     </section>
     <footer class="clip-top"><a id="contact"></a>
-        <div style="text-align: center;" class="content-wrapper">
+        <div class="content-wrapper">
             <div class="tabs">
                 <div class="tabs-buttons">
                     <button class="text-button active">Импорт</button>
@@ -966,7 +968,6 @@
         <div style="align-items: center;" class="footer-contact flex wrap jc-around">
             <p><b>Адрес:</b> 630008,<br> Россия, г. Новосибирск,<br> ул. Бориса Богаткова 99, <br>офис 415</p>
             <p><b>Телефон:</b><br> <a href="tel:+74995609090">+7 (383) 383-47-18</a></p>
-            <img src="img/logo_2.png" width="230" alt="">
             <p><b>Email:</b><br> <a href="mailto:info@colibri-customs.ru">info@colibri-customs.ru</a></p>
             <p><b>Время работы:</b><br> ПН-ПТ. 9.00-18.00</p>
         </div>
@@ -1021,4 +1022,5 @@
         new WOW().init();
     </script>
 </body>
+
 </html>
