--- a/colibri/index.html
+++ b/colibri/index.html
@@ -49,7 +49,7 @@
                 </ul>
                 <img class="little-logo" src="img/logo.png" alt="">
             </div>
-            <button id="zvonok" class="button-header popup button-no-mobile">Заказать
+            <button id="zvonok" class="button-popup popup button-no-mobile">Заказать
                 звонок</button>
         </header>
     </div>
@@ -568,7 +568,7 @@
     </section>
     <section class="consult clip clip-top"><a id="get"></a>
         <h3>Получить бесплатную консультацию</h3>
-        <button id="zvonok1" class="popup button-header">Консультация</button>
+        <button id="zvonok1" class="popup button-popup">Консультация</button>
     </section>
     <section class="items-group"><a id="group"></a>
         <div class="content-wrapper">
@@ -705,7 +705,7 @@
                     <img src="img/111.png" width="382" height="237" alt="">
                     <p class="offer-text"><span>Оптимизация таможенных платежей</span><br>
                         Проверяем наличие всех возможных вариантов снижения таможенных платежей, не противоречащих
-                        законодательству РФ и Таможенного Союза. /p>
+                        законодательству РФ и Таможенного Союза. </p>
                 </div>
                 <div class="offer-item wow bounceInUp">
                     <img src="img/222.png" width="382" height="237" alt="">
@@ -770,7 +770,7 @@
                     <input type="text" name="system_field_2" value="" autocomplete="off" />
                 </div>
             </div>
-            <button class="js__send_question button-header">Отправить</button>
+            <button class="js__send_question button-popup">Отправить</button>
         </div>
     </section>
     <section class="feedback"><a id="feedback"></a>
@@ -874,7 +874,7 @@
         <p>Комплексное таможенное оформление</p><br>
         <span>за 99 рублей</span><br>
         <p>+ проверка документов в подарок</p><br>
-        <button id="zakazat" class="popup popup-us button-header">Заказать услугу</button>
+        <button id="zakazat" class="popup popup-us button-popup">Заказать услугу</button>
     </section>
     <section class="timer">
         <div class="content-wrapper">
@@ -977,7 +977,7 @@
     <div id="zvonok-popup" class="popup-callback">
         <button class="img-close"><img src="img/close.png" alt="" width="19" height="19"></button>
         <p>Заказать звонок</p>
-        <div class="not_me_remove">
+        <div class="popup-forms">
             <input class="popup-form" type="text" value="" name="fields[Имя]" placeholder="Ваше имя"
                 required="required">
             <input class="popup-form" type="phone" value="" name="fields[Телефон]" placeholder="+7 (xxx) xxx xx xx"
@@ -994,11 +994,7 @@
     <div class="popup-callback popup-usluga">
         <button class="img-close"><img src="img/close.png" alt="" width="19" height="19"></button>
         <p>Заказать услугу</p>
-        <div class="not_me_remove">
-            <input type="checkbox" id="zakaz" value="да" />
-            <label style="color: #000; margin-bottom: 20px; display: inline-block;" for="zakaz">Хочу участвовать в
-                акции</label>
-
+        <div class="popup-forms"> 
             <input class="popup-form" type="text" value="" name="fields[Имя]" placeholder="Ваше имя"
                 required="required">
             <input class="popup-form" type="phone" value="" name="fields[Телефон]" placeholder="+7 (xxx) xxx xx xx"
