--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -11,21 +11,21 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <title>Чисто 5</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    </head>
-    <header>
-        <div class="content-wrapper flex wrap jc-between align-cent">
-            <img class="logo-top" src="img/logo.png" width="200" height="92" alt="">
-            <div class="phone flex align-cent">
-                <img src="img/phone.png" width="37" height="37" alt="">
-                <a href="tel:89130000000"> 8 913 <span>000 00 01</span></a>
-            </div>
-            <div class="phone flex align-cent">
-                <img src="img/phone-w.png" width="37" height="37" alt="">
-                <a href="tel:83830000000"> 8 383 <span>000 00 00<span></a>
-            </div>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<header>
+    <div class="content-wrapper flex wrap jc-between align-cent">
+        <img class="logo-top" src="img/logo.png" width="200" height="92" alt="">
+        <div class="phone flex align-cent">
+            <img src="img/phone.png" width="37" height="37" alt="">
+            <a href="tel:89130000000"> 8 913<span>000 00 01</span></a>
+        </div>
+        <div class="phone flex align-cent">
+            <img src="img/phone-w.png" width="37" height="37" alt="">
+            <a href="tel:83830000000"> 8 383<span>000 00 00<span></a>
+        </div>
         <button class="header-button popup-on">Задать вопрос</button>
         <div id="menu-open" class="flex burger jc-center align-cent">
             <div class="burger-item"></div>
@@ -34,17 +34,19 @@
         </div>
     </div>
     <div class="content-wrapper">
-    <div class="top-text">
-        <p>Скидка 50% <br>всем новым клиентам<br><span>на первую уборку*</span></p>
+        <div class="top-text">
+            <p>Скидка 50% <br>всем новым клиентам<br><span>на первую уборку*</span></p>
+        </div>
+        <div class="bottom-text flex jc-between wrap">
+            <p>Порадуйте себя и своих близких! Звоните</p><button class="top-bottom popup-on">Заказать обратный
+                звонок</button>
+        </div>
     </div>
-    <div class="bottom-text flex jc-between wrap">
-        <p>Порадуйте себя и своих близких! Звоните</p><button class="top-bottom popup-on">Заказать обратный звонок</button>
-    </div>
-</div>
-    </header>
-    
-    <body>
-        <section class="working">
+</header>
+
+<body>
+    <section class="working">
+        <a id="how"></a>
         <div class="section-header bg-color-orange">
             <h3 class="content-wrapper">Как мы работаем</h3>
         </div>
@@ -82,6 +84,7 @@
     </section>
     <section>
         <div class="section-header bg-color-green">
+            <a id="preim"></a>
             <h3 class="content-wrapper">Наши преимущества</h3>
         </div>
         <div class="content-wrapper advantage-wrapper flex wrap jc-between">
@@ -128,6 +131,7 @@
         </div>
     </section>
     <section class="cleaning">
+        <a id="where"></a>
         <div class="section-header bg-color-orange">
             <h3 class="content-wrapper">Где планируете делать уборку</h3>
         </div>
@@ -156,13 +160,14 @@
         </div>
     </section>
     <section class="prices">
+        <a id="price"></a>
         <div class="section-header bg-color-green">
             <h3 class="content-wrapper">Наши цены</h3>
         </div>
         <div class="content-wrapper flex">
             <div>
                 <div class="scew-block">
-                    <div class="normal-text">
+                    <div class="work-normal normal-text">
                         <p>от 550 <span>рублей в час**</span></p>
                     </div>
 
@@ -174,6 +179,7 @@
         </div>
     </section>
     <section class="discounts">
+        <a id="discount"></a>
         <div class="section-header bg-color-orange">
             <h3 class="content-wrapper">Скидки</h3>
         </div>
@@ -188,7 +194,8 @@
                 <div class="discounts-item work-normal">
                     <p>10%<span>скидка</span></p>
                     <div class="status golden">Золотой статус</div>
-                    <p class="discounts-info">Для клиентов, которые в течение&nbsp;<span>3-х месяцев ежемесячно заказывают
+                    <p class="discounts-info">Для клиентов, которые в течение&nbsp;<span>3-х месяцев ежемесячно
+                            заказывают
                             более 1
                             уборки.***</span></p>
                 </div>
@@ -200,41 +207,57 @@
         </div>
     </section>
     <section class="feedback">
+        <a id="feedback"></a>
         <div class="section-header bg-color-forrest">
             <h3 class="content-wrapper">Отзывы</h3>
         </div>
         <div class="content-wrapper owl-carousel slide-one owl-theme">
             <div class="flex jc-between feedback-wrapper">
-            <div class="feedback-text">
-                <p class="feedback-name">Иван Иванов</p>
-                <p class="feedback-parameters"><span>Тариф уборки:</span> Генеральня уборка</p>
-                <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem </p>
+                <div class="feedback-text">
+                    <p class="feedback-name">Иван Иванов</p>
+                    <p class="feedback-parameters"><span>Тариф уборки:</span> Генеральня уборка</p>
+                    <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+                        unde omnis iste natus error sit voluptatem </p>
+                </div>
+                <img class="cleaning-girl" src="img/cleaning-girl.png" alt="">
+                <div class="video-feedback flex">
+                    <p>Видеоотзыв</p>
+                    <iframe width="495" height="295" src="https://www.youtube.com/embed/_gMKG6oqJ90" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <img src="img/hand.png" alt="">
+                </div>
             </div>
-            <img class="cleaning-girl" src="img/cleaning-girl.png" alt="">
-            <div class="video-feedback flex">
-                <p>Видеоотзыв</p>
-                <iframe width="495" height="295" src="https://www.youtube.com/embed/_gMKG6oqJ90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <img src="img/hand.png" alt="">
+            <div class="flex jc-between feedback-wrapper">
+                <div class="feedback-text">
+                    <p class="feedback-name">Иван Иванов</p>
+                    <p class="feedback-parameters"><span>Тариф уборки:</span> Генеральня уборка</p>
+                    <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+                        unde omnis iste natus error sit voluptatem </p>
+                </div>
+                <img class="cleaning-girl" src="img/cleaning-girl.png" alt="">
+                <div class="video-feedback flex">
+                    <p>Видеоотзыв</p>
+                    <iframe width="495" height="295" src="https://www.youtube.com/embed/_gMKG6oqJ90" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <img src="img/hand.png" alt="">
+                </div>
             </div>
-        </div>
-        <div class="flex jc-between feedback-wrapper">
-            <div class="feedback-text">
-                <p class="feedback-name">Иван Иванов</p>
-                <p class="feedback-parameters"><span>Тариф уборки:</span> Генеральня уборка</p>
-                <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem </p>
-            </div>
-            <img class="cleaning-girl" src="img/cleaning-girl.png" alt="">
-            <div class="video-feedback flex">
-                <p>Видеоотзыв</p>
-                <iframe width="495" height="295" src="https://www.youtube.com/embed/_gMKG6oqJ90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <img src="img/hand.png" alt="">
-            </div>
-        </div>
         </div>
     </section>
     <section class="forms">
+        <a id="zayavka"></a>
         <div class="content-wrapper flex wrap jc-between">
             <div class="forms-info">
                 <p>Позвоните нам сейчас.<br>Порадуйте себя и своих близких!</p>
@@ -278,31 +301,45 @@
 <script src="js/main.js"></script>
 <div class="overlay"></div>
 <div class="flex jc-center">
-<div class="popup">
-    <div class="close">X</div>
-   <p><span>ОСТАВЬТЕ&nbsp;</span>СВОЮ ЗАЯВКУ</p>
-   <p>Детали уточним по телефону</p>
-   <input class="input-popup" type="text" placeholder="Ваше Имя">
-   <input class="input-popup" type="phone" placeholder="Ваш телефон">
-   <button class="popup-button">Заказать</button>
-</div>
+    <div class="popup">
+        <div class="close">X</div>
+        <p><span>ОСТАВЬТЕ&nbsp;</span>СВОЮ ЗАЯВКУ</p>
+        <p>Детали уточним по телефону</p>
+        <input class="input-popup" type="text" placeholder="Ваше Имя">
+        <input class="input-popup" type="phone" placeholder="Ваш телефон">
+        <button class="popup-button">Заказать</button>
+    </div>
 </div>
 <div class="content-wrapper">
-<div class="aside-menu">
+    <div class="aside-menu">
         <div id="menu-close" class="flex burger burger-active jc-center align-cent">
-                <div class="burger-item"></div>
-                <div class="burger-item"></div>
-                <div class="burger-item"></div>
-            </div>
-            <ul>
-                    <a href="#"><li>Как мы работаем</li></a>
-                    <a href="#"><li>Наши преимущества</li></a>
-                    <a href="#"><li>Где планируете делать уборку</li></a>
-                    <a href="#"><li>Наши цены</li></a>
-                    <a href="#"><li>Скидки</li></a>
-                    <a href="#"><li>Отзывы</li></a>
-                    <a href="#"><li>Оставить заявку</li></a>
-            </ul>
-</div>
+            <div class="burger-item"></div>
+            <div class="burger-item"></div>
+            <div class="burger-item"></div>
+        </div>
+        <ul class="menu">
+            <a href="#how">
+                <li>Как мы работаем</li>
+            </a>
+            <a href="#preim">
+                <li>Наши преимущества</li>
+            </a>
+            <a href="#where">
+                <li>Где планируете делать уборку</li>
+            </a>
+            <a href="#price">
+                <li>Наши цены</li>
+            </a>
+            <a href="#discount">
+                <li>Скидки</li>
+            </a>
+            <a href="#feedback">
+                <li>Отзывы</li>
+            </a>
+            <a href="#zayavka">
+                <li>Оставить заявку</li>
+            </a>
+        </ul>
+    </div>
 </div>
 </html>
