--- a/it_sint/index.html
+++ b/it_sint/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -120,7 +120,6 @@
                     <div><label class="custom-file-upload">
                         <input type="file"/>
                          <div class="top-info__button">Загрузить<br>опросный лист</div>
-                         <!-- <div class="load-mob"><a class="button1 button-load" href="/upload/medialibrary/Opros_list_kotelnaya.doc">Скачать<br>опросный лист</a></div> -->
                     </label>
                     </div>
 
@@ -205,8 +204,5 @@
   <script src="https://unpkg.com/swiper/js/swiper.js"></script>
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 <script src="script.js"></script>
-<script>
-	
-</script>
 
 
