--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -200,7 +200,7 @@
                             уборки.***</span></p>
                 </div>
             </div>
-            <div class="discounts-item">
+            <div class="discounts-item last-item">
                 <p class="red">20% <span class="black">скидка</span></p>
                 <div class="status">На День Рождения!***</div>
             </div>
@@ -215,8 +215,8 @@
             <div class="flex jc-between feedback-wrapper">
                 <div class="feedback-text">
                     <p class="feedback-name">Иван Иванов</p>
-                    <p class="feedback-parameters"><span>Тариф уборки:</span> Генеральня уборка</p>
-                    <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
+                    <p class="feedback-parameters feedback-tarif"><span>Тариф уборки:</span> Генеральня уборка</p>
+                    <p class="feedback-parameters feedback-main"><span>Обьект:</span> Загородный дом 206 м2</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -236,8 +236,8 @@
             <div class="flex jc-between feedback-wrapper">
                 <div class="feedback-text">
                     <p class="feedback-name">Иван Иванов</p>
-                    <p class="feedback-parameters"><span>Тариф уборки:</span> Генеральня уборка</p>
-                    <p class="feedback-parameters"><span>Обьект:</span> Загородный дом 206 м2</p>
+                    <p class="feedback-parameters feedback-tarif"><span>Тариф уборки:</span> Генеральня уборка</p>
+                    <p class="feedback-parameters feedback-main"><span>Обьект:</span> Загородный дом 206 м2</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
@@ -260,9 +260,9 @@
         <a id="zayavka"></a>
         <div class="content-wrapper flex wrap jc-between">
             <div class="forms-info">
-                <p>Позвоните нам сейчас.<br>Порадуйте себя и своих близких!</p>
-                <p class="flex align-cent">СКИДКА <span>50<span>%</span></span></p>
-                <p>на первую уборку*</p>
+                <p class="forms-up">Позвоните нам сейчас.<br>Порадуйте себя и своих близких!</p>
+                <p class="forms-middle flex align-cent">СКИДКА <span class="sum-discount">50<span>%</span></span></p>
+                <p class="forms-down">на первую уборку*</p>
             </div>
             <div class="inputs">
                 <input type="text" placeholder="Имя">
@@ -304,7 +304,7 @@
     <div class="popup">
         <div class="close">X</div>
         <p><span>ОСТАВЬТЕ&nbsp;</span>СВОЮ ЗАЯВКУ</p>
-        <p>Детали уточним по телефону</p>
+        <p class="popup-info">Детали уточним по телефону</p>
         <input class="input-popup" type="text" placeholder="Ваше Имя">
         <input class="input-popup" type="phone" placeholder="Ваш телефон">
         <button class="popup-button">Заказать</button>
