--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -201,7 +201,7 @@
                 </div>
             </div>
             <div class="discounts-item last-item">
-                <p class="red">20% <span class="black">скидка</span></p>
+                <p class="red">20%<span>скидка</span></p>
                 <div class="status">На День Рождения!***</div>
             </div>
         </div>
@@ -342,4 +342,5 @@
         </ul>
     </div>
 </div>
+
 </html>
