--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -289,7 +289,7 @@
                 <img src="img/phone-w.png" width="37" height="37" alt="">
                 <a href="tel:83830000000"> 8 383 <span>000 00 00<span></a>
             </div>
-            <p class="bottom-text">* Скидка 50% предоставляется новым клиентам. Общий размер дисконта <br>не превышает 2000 руб. За
+            <p>* Скидка 50% предоставляется новым клиентам. Общий размер дисконта <br>не превышает 2000 руб. За
                 подробностями обращайтесь к нашим операторам.<br>
                 ** Не является публичной офертой, подробности узнавайте у оператора.<br>
                 *** Скидки не суммируются. </p>
