--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" type="text/css" href="slick/slick.css">
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
   <link rel="stylesheet" href="master.css">
-  <link href="https://fonts.googleapis.com/css?family=Smythe" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
@@ -16,13 +15,15 @@
       <div class="container">
             <div class="outline"></div>
             <div class="menu">
-                  <ion-icon name="menu"></ion-icon>
+                  <a class="vk" target="_blank" href="https://vk.com/graf_andreev"></a>
+                  <a class="inst" target="_blank" href="https://www.instagram.com/graf_andreev/"></a>
+                  <a class="github" target="_blank" href="https://github.com/graf-andreev"></a>
             </div>
             <div class="title">
-                  THE WINE SHOP
+                  Сайт портфолио
             </div>
             <div class="tagline">
-                  As much character as the people who make them.
+                  Адаптивные, красивые и кроссбраузерные сайты
             </div>
             <div class="morewine">
                   <button>Смотреть выполненные проекты</button>
@@ -46,10 +47,10 @@
                         <div class="product two">
                               <img src="02.JPG" alt="">
                               <div class="txt">
-                                    <h1>Smythe Mixology</h1>
-                                    <p>Price : $40</p>
+                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
+                                    <p>Жирафы, адатив, flexbox и анимации</p>
                                     <div class="add">
-                                          <button>BUY NOW</button>
+                                          <button>Смотреть на GitHub</button>
                                     </div>
                               </div>
                         </div>
@@ -58,10 +59,10 @@
                         <div class="product three">
                               <img src="03.png" alt="">
                               <div class="txt">
-                                    <h1>Smythe Cherry</h1>
-                                    <p>Price : $40</p>
+                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
+                                    <p>Жирафы, адатив, flexbox и анимации</p>
                                     <div class="add">
-                                          <button>BUY NOW</button>
+                                          <button>Смотреть на GitHub</button>
                                     </div>
                               </div>
                         </div>
@@ -70,10 +71,22 @@
                         <div class="product four">
                               <img src="04.png" alt="">
                               <div class="txt">
-                                    <h1>Pepper</h1>
-                                    <p>Price : $40</p>
+                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
+                                    <p>Жирафы, адатив, flexbox и анимации</p>
                                     <div class="add">
-                                          <button>BUY NOW</button>
+                                          <button>Смотреть на GitHub</button>
+                                    </div>
+                              </div>
+                        </div>
+                  </a>
+                  <a href="#" class="block">
+                        <div class="product five">
+                              <img src="04.png" alt="">
+                              <div class="txt">
+                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
+                                    <p>Жирафы, адатив, flexbox и анимации</p>
+                                    <div class="add">
+                                          <button>Смотреть на GitHub</button>
                                     </div>
                               </div>
                         </div>
@@ -82,7 +95,7 @@
             <a class="close-btn">close</a>
       </div>
 
-      <script type="text/javascript">
+      <script>
 
       $(document).ready(function() {
             var docWidth = $('body').width(),
