--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                               </div>
                         </div>
                   </a>
-                  <a href="#" class="block">
+                  <a href="https://graf-andreev.github.io/colibri/" class="block">
                         <div class="product two">
                               <img src="02.JPG" alt="">
                               <div class="txt">
@@ -55,7 +55,7 @@
                               </div>
                         </div>
                   </a>
-                  <a href="#" class="block">
+                  <a href="https://graf-andreev.github.io/it_sint/" class="block">
                         <div class="product three">
                               <img src="03.png" alt="">
                               <div class="txt">
@@ -67,7 +67,7 @@
                               </div>
                         </div>
                   </a>
-                  <a href="#" class="block">
+                  <a href="https://graf-andreev.github.io/chisto5/" class="block">
                         <div class="product four">
                               <img src="04.png" alt="">
                               <div class="txt">
@@ -79,7 +79,7 @@
                               </div>
                         </div>
                   </a>
-                  <a href="#" class="block">
+                  <a href="https://graf-andreev.github.io/shapki/" class="block">
                         <div class="product five">
                               <img src="04.png" alt="">
                               <div class="txt">
