--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="site">
             <div id="wrap">
                   <a href="https://graf-andreev.github.io/english_school/" class="block">
-                        <div class="product one">
-                              <img src="01.JPG" alt="">
+                        <div class="product">
+                              <img src="01.JPG" width="650" height="500" alt="">
                               <div class="txt">
                                     <h1>Лэндинг для школы английского Leven Eleven</h1>
                                     <p>Жирафы, адатив, flexbox и анимации</p>
@@ -44,10 +44,10 @@
                         </div>
                   </a>
                   <a href="https://graf-andreev.github.io/colibri/" class="block">
-                        <div class="product two">
-                              <img src="02.JPG" alt="">
+                        <div class="product">
+                              <img src="02.JPG" width="650" height="500" alt="">
                               <div class="txt">
-                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
+                                    <h1>Лэндинг для таможенной компании Colibri</h1>
                                     <p>Жирафы, адатив, flexbox и анимации</p>
                                     <div class="add">
                                           <button>Смотреть на GitHub</button>
@@ -56,11 +56,11 @@
                         </div>
                   </a>
                   <a href="https://graf-andreev.github.io/it_sint/" class="block">
-                        <div class="product three">
-                              <img src="03.png" alt="">
+                        <div class="product">
+                              <img src="03.JPG" alt="">
                               <div class="txt">
-                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
-                                    <p>Жирафы, адатив, flexbox и анимации</p>
+                                    <h1>Страница для сайта компании It-sintez</h1>
+                                    <p>Много кастомных форм</p>
                                     <div class="add">
                                           <button>Смотреть на GitHub</button>
                                     </div>
@@ -68,8 +68,8 @@
                         </div>
                   </a>
                   <a href="https://graf-andreev.github.io/chisto5/" class="block">
-                        <div class="product four">
-                              <img src="04.png" alt="">
+                        <div class="product">
+                              <img src="04.JPG" alt="">
                               <div class="txt">
                                     <h1>Лэндинг для школы английского Leven Eleven</h1>
                                     <p>Жирафы, адатив, flexbox и анимации</p>
@@ -80,8 +80,8 @@
                         </div>
                   </a>
                   <a href="https://graf-andreev.github.io/shapki/" class="block">
-                        <div class="product five">
-                              <img src="04.png" alt="">
+                        <div class="product">
+                              <img src="05.JPG" alt="">
                               <div class="txt">
                                     <h1>Лэндинг для школы английского Leven Eleven</h1>
                                     <p>Жирафы, адатив, flexbox и анимации</p>
