--- a/dreads/index.html
+++ b/dreads/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dreads</title>
-    <link rel="stylesheet" href="/css/fullpage.css">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/fullpage.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
@@ -19,6 +19,6 @@
         <div class="section five" data-anchor="slide5">Some section5</div>
     </div>
 </body>
-<script src="/js/fullpage.js"></script>
-<script src="/js/script.js"></script>
+<script src="../js/fullpage.js"></script>
+<script src="../js/script.js"></script>
 </html>
