--- a/shapki/index.html
+++ b/shapki/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,21 +58,23 @@
                 <img src="img/icon5.png" width="25" height="25" alt="">
                 <p>Избранное <span>3</span></p>
             </div>
-            <div class="search-wrapper"><input class="search" type="search" placeholder="Поиск">
-                <button class="search-submit"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="5mm"
-                        height="5mm" version="1.1"
-                        style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                        viewBox="0 0 20000 20000" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g id="Слой_x0020_1">
-                            <metadata id="CorelCorpID_0Corel-Layer" />
-                            <path class="fil0 str0"
-                                d="M8732.1 13558.94c-2534.88,204.19 -4937.98,-1220.39 -6003.81,-3559.13 -1393.34,-3057.39 -73.84,-6651.98 2947.21,-8028.76 3021.04,-1376.78 6599.6,-14.38 7992.94,3043.01 1339.39,2939 175.98,6399.93 -2649.96,7883.15" />
-                            <path class="fil0 str1"
-                                d="M13340.26 11402.46l4878.49 4878.49c0,0 992.41,1144.09 281.62,1817.5 -710.79,673.41 -1846.84,-357.93 -1846.84,-357.93l-4752.59 -5089.23" />
-                        </g>
-                    </svg></button>
-            </div>
+            <form action="#">
+                <div class="search-wrapper"><input class="search" type="search" placeholder="Поиск">
+                    <button class="search-submit"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve"
+                            width="5mm" height="5mm" version="1.1"
+                            style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                            viewBox="0 0 20000 20000" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g id="Слой_x0020_1">
+                                <metadata id="CorelCorpID_0Corel-Layer" />
+                                <path class="fil0 str0"
+                                    d="M8732.1 13558.94c-2534.88,204.19 -4937.98,-1220.39 -6003.81,-3559.13 -1393.34,-3057.39 -73.84,-6651.98 2947.21,-8028.76 3021.04,-1376.78 6599.6,-14.38 7992.94,3043.01 1339.39,2939 175.98,6399.93 -2649.96,7883.15" />
+                                <path class="fil0 str1"
+                                    d="M13340.26 11402.46l4878.49 4878.49c0,0 992.41,1144.09 281.62,1817.5 -710.79,673.41 -1846.84,-357.93 -1846.84,-357.93l-4752.59 -5089.23" />
+                            </g>
+                        </svg></button>
+            </form>
         </div>
+    </div>
     </div>
     <ul class="main-nav flex borders jc-between align-cent">
         <div class="start flex align-cent">
@@ -433,6 +436,7 @@
             </div>
     </ul>
 </header>
+
 <body>
     <div class="main-wrapper">
         <div class="mobile-change">
@@ -1266,4 +1270,5 @@
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
 <div class="overlay"></div>
+
 </html>
