--- a/chisto5/index.html
+++ b/chisto5/index.html
@@ -40,8 +40,8 @@
                 <p>Скидка 50% <br>всем новым клиентам<br><span>на первую уборку*</span></p>
             </div>
             <div class="bottom-text flex jc-between wrap">
-                <p>Порадуйте себя и своих близких! Звоните</p><button class="top-bottom popup-on">Заказать обратный
-                    звонок</button>
+                <p>Порадуйте себя и своих близких! Звоните</p>
+                <button class="top-bottom popup-on">Заказать обратный звонок</button>
             </div>
         </div>
     </header>
@@ -139,7 +139,7 @@
             <div>
                 <form action="#" class="flex wrap jc-between" action="#">
                     <p>
-                        <input type="checkbox" id="test1" />
+                        <input class="phone" type="checkbox" id="test1" />
                         <label for="test1">Уборка в квартире</label>
                     </p>
                     <p>
@@ -291,7 +291,8 @@
                     <img src="img/phone-w.png" width="37" height="37" alt="">
                     <a href="tel:83830000000"> 8 383 <span>000 00 00<span></a>
                 </div>
-                <p class="bottom-text">* Скидка 50% предоставляется новым клиентам. Общий размер дисконта <br>не превышает
+                <p class="bottom-text">* Скидка 50% предоставляется новым клиентам. Общий размер дисконта <br>не
+                    превышает
                     2000 руб. За
                     подробностями обращайтесь к нашим операторам.<br>
                     ** Не является публичной офертой, подробности узнавайте у оператора.<br>
@@ -300,52 +301,53 @@
         </div>
     </footer>
     <div class="overlay"></div>
-<div class="flex jc-center">
-    <div class="popup">
-        <div class="close">X</div>
-        <p><span>ОСТАВЬТЕ&nbsp;</span>СВОЮ ЗАЯВКУ</p>
-        <p class="popup-info">Детали уточним по телефону</p>
-        <form action="#">
-            <input class="input-popup" type="text" placeholder="Ваше Имя">
-            <input class="input-popup" type="phone" placeholder="Ваш телефон">
-            <button class="popup-button">Заказать</button>
-        </form>
-    </div>
-</div>
-<div class="content-wrapper">
-    <div class="aside-menu">
-        <div id="menu-close" class="flex burger burger-active jc-center align-cent">
-            <div class="burger-item"></div>
-            <div class="burger-item"></div>
-            <div class="burger-item"></div>
+    <div class="flex jc-center">
+        <div class="popup">
+            <div class="close">X</div>
+            <p><span>ОСТАВЬТЕ&nbsp;</span>СВОЮ ЗАЯВКУ</p>
+            <p class="popup-info">Детали уточним по телефону</p>
+            <form action="#">
+                <input class="input-popup" type="text" placeholder="Ваше Имя">
+                <input class="input-popup" type="phone" placeholder="Ваш телефон">
+                <button class="popup-button">Заказать</button>
+            </form>
         </div>
-        <ul class="menu">
-            <a href="#how">
-                <li>Как мы работаем</li>
-            </a>
-            <a href="#preim">
-                <li>Наши преимущества</li>
-            </a>
-            <a href="#where">
-                <li>Где планируете делать уборку</li>
-            </a>
-            <a href="#price">
-                <li>Наши цены</li>
-            </a>
-            <a href="#discount">
-                <li>Скидки</li>
-            </a>
-            <a href="#feedback">
-                <li>Отзывы</li>
-            </a>
-            <a href="#zayavka">
-                <li>Оставить заявку</li>
-            </a>
-        </ul>
     </div>
-</div>
+    <div class="content-wrapper">
+        <div class="aside-menu">
+            <div id="menu-close" class="flex burger burger-active jc-center align-cent">
+                <div class="burger-item"></div>
+                <div class="burger-item"></div>
+                <div class="burger-item"></div>
+            </div>
+            <ul class="menu">
+                <a href="#how">
+                    <li>Как мы работаем</li>
+                </a>
+                <a href="#preim">
+                    <li>Наши преимущества</li>
+                </a>
+                <a href="#where">
+                    <li>Где планируете делать уборку</li>
+                </a>
+                <a href="#price">
+                    <li>Наши цены</li>
+                </a>
+                <a href="#discount">
+                    <li>Скидки</li>
+                </a>
+                <a href="#feedback">
+                    <li>Отзывы</li>
+                </a>
+                <a href="#zayavka">
+                    <li>Оставить заявку</li>
+                </a>
+            </ul>
+        </div>
+    </div>
 </body>
 <script src="js/jq-min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
+
 </html>
